--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="away">
-            <h1>Guest</h1>
+            <h1>Away</h1>
             <div class="score-div"  id="score-away">0</div>
             <div class="increment-btns">
                 <button onclick="addOneAway()">+1</button>
