--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
+    <h1 class="main-heading">Basketball Score Card</h1>
     <div class="score-board">
         <div class="home">
             <h1>Home</h1>
